--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+[Uu]nityGenerated/
 Assets/AssetStoreTools*
+*.pidb.meta
 
 # Visual Studio 2015 cache directory
 /.vs/
